force-app/main/default/objects/Book__c/fields/Con_Tain__c.field-meta.xml
<CustomField>
    <fullName>Con_Tain__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Con?Tain</label>
    <type>Checkbox</type>
</CustomField>