force-app/main/default/objects/Book__c/fields/Number_of_pages__c.field-meta.xml
<CustomField>
    <fullName>Number_of_pages__c</fullName>
    <label>Number of pages</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>