force-app/main/default/objects/Book__c/fields/TestRich__c.field-meta.xml
<CustomField>
    <fullName>TestRich__c</fullName>
    <label>TestRich</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>